# aup-learning-cloud

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  README.md  auplc-installer  pyproject.toml
.github/: build-config.json
.github/workflows/: docker-build.yml  lint.yml  pack-bundle.yml
auplc_installer/: catalog.py  cli.py  gpu.py  images.py  overlay.py  pack.py  rocm.py  state.py  summary.py  tui.py
deploy/ansible/: inventory.yml
deploy/ansible/playbooks/: pb-pxe-controller.yml  pb-rocm.yml
deploy/k8s/: README.md
deploy/k8s/nfs-provisioner/: values.yaml
deploy/scripts/: deploy-kubeconfig.sh  example-kubeconfig.yaml
dockerfiles/: Makefile
dockerfiles/Base/: .dockerignore  Dockerfile.cpu  Dockerfile.rocm  README.md
dockerfiles/Base/jupyterlab-rocm/: .gitignore  LICENSE  README.md  install.json  package.json  pyproject.toml  tsconfig.json
dockerfiles/Base/jupyterlab-rocm/jupyter-config/server-config/: jupyterlab_rocm.json
dockerfiles/Base/jupyterlab-rocm/jupyterlab_rocm/: __init__.py  handlers.py  magics.py  metrics.py  profiler.py  sysinfo.py
dockerfiles/Base/jupyterlab-rocm/schema/: plugin.json
dockerfiles/Base/jupyterlab-rocm/src/: cellProfileFloat.ts  cellProfileSettings.ts  chartSetup.ts  handler.ts  index.ts  types.ts  widget.tsx
dockerfiles/Base/jupyterlab-rocm/src/components/: Dashboard.tsx  Profiler.tsx  StaticInfo.tsx
dockerfiles/Base/jupyterlab-rocm/style/: base.css
dockerfiles/Base/jupyterlab-rocm/tests/: test_magics.py  test_metrics.py  test_profiler.py  test_sysinfo.py
dockerfiles/Base/notebooks/: torch-gemm-example.ipynb
dockerfiles/Code/: .dockerignore  Dockerfile  README.md  build.sh  start-code-server.sh
dockerfiles/Code/auplc-hub-link/: auplc-hub-link-0.0.0.vsix  package-lock.json  package.json
dockerfiles/Code/auplc-hub-link/src/: extension.ts
dockerfiles/Code/scripts/: install-code-system-packages.sh  install-node-toolchain.sh  install-pixi-toolchain.sh
dockerfiles/Courses/: README.md
dockerfiles/Courses/PhySim/: Dockerfile
dockerfiles/Hub/: Dockerfile
docs/deploy/scripts/: README.md
docs/jupyterhub/: How_to_Setup_GitHub_OAuth.md  monitoring.md
projects/CV/: CV01_Classification.ipynb  CV02_ResNet.ipynb  CV03_Object_Detection.ipynb  CV04_Segmentation.ipynb  CV05_Segment_Anything.ipynb  CV06_Tracking.ipynb  CV07_VAE_cVAE.ipynb  CV08_Diffusion_Model.ipynb  DL08_Diffusion_Model.ipynb  DL08_Diffusion_Model_new.ipynb
projects/DL/: DL02_SVM.ipynb  DL03_KMeans.ipynb  DL04_Decision_Tree.ipynb  DL05_Regression_Model.ipynb  DL06_Neural_Network.ipynb  DL07_Word2Vec.ipynb  DL08_Basic_CNN_CIFAR10.ipynb  DL09_AutoEncoder.ipynb  DL10_Seq2Seq.ipynb  DL11_GAN.ipynb  DL12_Transformer.ipynb
projects/LLM/: LLM01-LLM-Introduction-and-Inference.ipynb  LLM02-Forward-Propagation.ipynb  LLM03-Backpropagation-and-Autograd.ipynb  LLM04-Tokenization-and-Positional-Encoding.ipynb  LLM05-Normalization-and-FFN.ipynb  LLM06-Attention-Mechanisms.ipynb  LLM07-FlashAttention.ipynb  LLM08-MoE-and-Numerical-Precision.ipynb  LLM09-LoRA-Fine-Tuning.ipynb  LLM10-Data-Processing-and-Model-Packaging.ipynb  LLM11-Training-Pipeline.ipynb  LLM12-Inference-and-KV-Cache.ipynb  LLM13-Sparse-Attention-and-PagedAttention.ipynb  LLM14-Build-a-Tiny-LLaMA-from-Scratch.ipynb  README.md
projects/PhySim/xml/franka_emika_panda/: README.md
runtime/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  values-dev.yaml  values-multi-nodes.yaml.example  values.yaml
runtime/chart/: .helmignore  Chart.yaml  README.md  values.schema.json  values.schema.yaml  values.yaml
runtime/chart/dashboards/: grafana-dashboard-aup-hub-resources.json
runtime/chart/templates/: NOTES.txt  _helpers-names.tpl  _helpers-netpol.tpl  _helpers.tpl  image-pull-secret.yaml  ingress.yaml
runtime/chart/templates/hub/: _helpers-passwords.tpl  configmap.yaml  cronjob-quota-refresh.yaml  deployment.yaml  netpol.yaml  pdb.yaml  pvc.yaml  rbac.yaml  secret-admin.yaml  secret-git-token.yaml  secret.yaml  service.yaml  serviceaccount.yaml
runtime/chart/templates/image-puller/: _helpers-daemonset.tpl  daemonset-continuous.yaml  daemonset-hook.yaml  job.yaml  priorityclass.yaml  rbac.yaml  serviceaccount-continuous.yaml  serviceaccount-hook.yaml  serviceaccount.yaml
runtime/chart/templates/monitoring/: grafana-dashboard-aup-hub.yaml  hub-metrics-networkpolicy.yaml  (+2 more)
runtime/hub/: requirements.txt
runtime/hub/core/: config.py  database.py  git_validation.py  groups.py  handlers.py  jupyterhub_config.py  metrics.py  metrics_updater.py  notifications.py  setup.py  stats_handlers.py
runtime/hub/frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
runtime/hub/tests/: test_git_clone_persistence.py  test_git_clone_script.sh  test_groups.py  test_notifications.py  test_onboarding_handlers.py  test_runtime_config.py  test_saml.py  test_spawner_runtime_metadata.py  test_validate_repo_handler.py
runtime/notebook/jupyterlab-runtime-status/: MANIFEST.in  README.md  package.json  setup.py  tsconfig.json  vitest.config.ts
runtime/shared/runtime-status/: README.md  tsconfig.json  vitest.config.ts
scripts/: manage_users.py
scripts/test/: test_auplc_installer.sh
source/: conf.py  index.rst
source/installation/: customizing-deployment.md  multi-node.md  quick-start.md  single-node.md
source/installation/includes/: selector-quickstart-gpu.rst
source/installation/multi-node/: multi-aipc-hardware-deployment.md
source/introduction/: overview.md
source/jupyterhub/: README.md  admin-manual.md  authentication-guide.md  configuration-reference.md  github-app-setup.md  github-oauth-setup.md  index.md  monitoring.md  quota-system.md  user-management.md
source/learning-toolkits/: computer-vision.md  deep-learning.md  index.md  llm-from-scratch.md  physics-simulation.md
source/user-guide/: admin-manual.md  code-server-guide.md  index.md  jupyterlab-guide.md  platform-basics.md
tests/installer/: test_catalog.py  test_cli_install_options.py  test_gpu.py  test_overlay.py  test_rocm.py
(+283 files in other folders)
