[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_rocm"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jupyter_server>=2.4.0,<3",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
# amdsmi ships with ROCm. Install it from your ROCm tree, e.g.:
#   pip install /opt/rocm/share/amd_smi
# It is intentionally left out of the hard dependencies so the package can be
# installed on machines where amdsmi is provided by the system ROCm install.
amdsmi = ["amdsmi"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_rocm/labextension"]
exclude = [".github", "binder", "node_modules"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_rocm/labextension" = "share/jupyter/labextensions/jupyterlab-rocm"
"install.json" = "share/jupyter/labextensions/jupyterlab-rocm/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "jupyterlab_rocm/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_rocm/labextension/static/style.js",
    "jupyterlab_rocm/labextension/package.json",
]
skip-if-exists = ["jupyterlab_rocm/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_rocm/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
